# LI3-2223

./: .goutputstream-2NMSV1  CMakeLists.txt  Guiao1.c  Makefile  Parser.c  README.md  Run  catalogo-drivers.h  catalogo-users.h  catalogo.c  guiao-3  main.c  main.h  queries.c  queries.h  tests
Resultados/: comando1  command1  command10  command10_output.txt  command11_output.txt  command12_output.txt  command13  command13_output.txt  command14  command14_output.txt  command15  command15_output.txt  command16  command16_output.txt  command17  command17_output.txt  command18_output.txt  command19_output.txt  command1_output.txt  command2  command20  command20_output.txt  command21_output.txt  command22_output.txt  command25  command26_output.txt  command2_output.txt  command3  command3_output.txt  command4  command4_output.txt  command5  command5_output.txt  command6  command6_output.txt  command7_output.txt  command8_output.txt  command9
entrada/: commands.txt  drivers.csv
includes/: catalogo-drivers.c  catalogo-drivers.h  catalogo-rides.c  catalogo-rides.h  catalogo-users.c  catalogo-users.h  catalogo.h  constructors.c  constructors.h  interpreter.c  interpreter.h  main.c  main.h  queries.h  stats.h
src/: catalogo-drivers.c  catalogo-drivers.h  catalogo-rides.c  catalogo-users.c  catalogo-users.h  catalogo.c  catalogo.h  constructors.c  constructors.h  interpreter.c  main.c  main.h  queries.c  queries.h  stats.c
